--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -144,3 +144,4 @@
                     'iplon', 'isarnet', 'iubaris', 'mdbf', 'pantheon',
                     'six'; changed contact info for Red Hat
 10 Jul 2014 - Updated one missed Red Hat contact person
+06 Oct 2017 - Added 'epel'
