update provider entry for Wincor-Nixdorf

--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -145,3 +145,4 @@
                     'six'; changed contact info for Red Hat
 10 Jul 2014 - Updated one missed Red Hat contact person
 06 Oct 2017 - Added 'epel'
+19 Jul 2019 - Removed an email from 'wn'
