Updates/additions for Verizon Media
Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -146,3 +146,4 @@
 10 Jul 2014 - Updated one missed Red Hat contact person
 06 Oct 2017 - Added 'epel'
 19 Jul 2019 - Removed an email from 'wn'
+23 Jul 2019 - Add oath and vz and update yahoo (all Verizon Media)
