--- a/packages/CHANGELOG
+++ b/packages/CHANGELOG
@@ -83,3 +83,4 @@
 22 Nov 2013 - Added lsb-motorola and lsb-versatushpc 
 27 Jan 2014 - Added lsb-here-wikvaya and lsb-motorola-scanner
 08 Jul 2014 - Added lsb-IsarFlow and lsb-mdbf
+11 May 2020 - Added 'lenovo'
