--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -147,3 +147,4 @@
 06 Oct 2017 - Added 'epel'
 19 Jul 2019 - Removed an email from 'wn'
 23 Jul 2019 - Add oath and vz and update yahoo (all Verizon Media)
+11 May 2020 - Added 'lenovo'
