Add setmy.info as requested in bug 4260

--- a/packages/CHANGELOG
+++ b/packages/CHANGELOG
@@ -84,3 +84,4 @@
 27 Jan 2014 - Added lsb-here-wikvaya and lsb-motorola-scanner
 08 Jul 2014 - Added lsb-IsarFlow and lsb-mdbf
 11 May 2020 - Added 'lenovo'
+15 May 2020 - Added 'setmy.info'
