--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -148,3 +148,4 @@
 19 Jul 2019 - Removed an email from 'wn'
 23 Jul 2019 - Add oath and vz and update yahoo (all Verizon Media)
 11 May 2020 - Added 'lenovo'
+15 May 2020 - Added 'setmy.info'
