update contact info for yahoo, oath, vz

--- a/providers/CHANGELOG
+++ b/providers/CHANGELOG
@@ -149,3 +149,4 @@
 23 Jul 2019 - Add oath and vz and update yahoo (all Verizon Media)
 11 May 2020 - Added 'lenovo'
 15 May 2020 - Added 'setmy.info'
+09 Mar 2022 - Updated contact for 'yahoo', 'oath', 'vz'
